--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
     </div>
     <div class="footer">
-        <span><b style="color: black">©️</b> Official Courses Of <a href="https://r3dhulk.github.io"><b
-                    style="color: black;">R3DHULK</b></a></span>
+        <span><b style="color: black">©️</b> Official Courses From <a href="https://r3dhulk.github.io"><b
+                    style="color: black;">redhulk.in</b></a></span>
     </div>
 
 </body>
